develop fix contrast color

--- a/gfbio_submissions/submission_ui/layout_playground/css/project.css
+++ b/gfbio_submissions/submission_ui/layout_playground/css/project.css
@@ -662,7 +662,7 @@ form.pagewide-form .template-links a i {
 }
 
 form.pagewide-form .template-links a:hover {
-  color: #FF6339;
+  color: #FF8362;
   background-color: #fff;
 }
 
