--- a/gfbio_submissions/submission_ui/layout_playground/scss/_forms.scss
+++ b/gfbio_submissions/submission_ui/layout_playground/scss/_forms.scss
@@ -385,7 +385,7 @@ form.pagewide-form {
       }
 
       &:hover {
-        color: $contrast-2;
+        color: $contrast-1;
         background-color: $white;
       }
     }
